--- a/src/main/resources/locale/locale_es_es.properties
+++ b/src/main/resources/locale/locale_es_es.properties
@@ -40,7 +40,7 @@ m.AbilityBonusTemplate=[[RED]]{0}: [[YELLOW]]{1}
 m.Effects=EFECTOS
 m.YourStats=TUS ESTADISTICAS
 m.SkillTaming=DOMADURA
-m.XPGainTaming=Shearing or combat w/ your wolves
+m.XPGainTaming=Shearing, Animal Taming, or combat w/ your wolves
 m.EffectsTaming1_0=Leyenda de bestias
 m.EffectsTaming1_1=Golpear con huesos examina a los lobos
 m.EffectsTaming2_0=Sangre
