--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -46,7 +46,7 @@ m.AbilityBonusTemplate=[[RED]]{0}: [[YELLOW]]{1}
 m.Effects=EFFECTEN
 m.YourStats=JOUW STATUS
 m.SkillTaming=TEMMEN
-m.XPGainTaming=Shearing or combat w/ your wolves
+m.XPGainTaming=Shearing, Animal Taming, or combat w/ your wolves
 m.EffectsTaming1_0=Wolfinspectie
 m.EffectsTaming1_1=Bone-meal inspecteert wolven
 m.EffectsTaming2_0=Gestold bloed
