--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -40,7 +40,7 @@ m.AbilityBonusTemplate=[[RED]]{0}: [[YELLOW]]{1}
 m.Effects=EFEKTY
 m.YourStats=TWOJE STATYSTYKI
 m.SkillTaming=OSWAJANIE
-m.XPGainTaming=Shearing or combat w/ your wolves
+m.XPGainTaming=Shearing, Animal Taming, or combat w/ your wolves
 m.EffectsTaming1_0=Wiedza o zwierzetach
 m.EffectsTaming1_1=Uderz koscia aby sprawdzic wilka.
 m.EffectsTaming2_0=Krwotok
