--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ Changelog:
 
 Version 1.3.00-dev
  - Added ability to customize drops for Excavation skill
+ - Added ability to customize drops for Fishing skill
  - Added player notification for when they stop Bleeding
  - Added configuration option to control mcMMO reporting damage events
  - Added hunger regain bonuses to Herbalism skill
