Removed Master/Apprentice chat spam, and more.. Began modifying party command, still a WIP and probably not working properly. Modified locale for Taming messages to trim them shorter.

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -396,8 +396,8 @@ m.EffectsTaming7_0=[[YELLOW]]Ruf der Wildniss
 m.EffectsTaming7_1=[[AQUA]]Beschwoere einen Wolf auf deine Seite
 m.EffectsTaming7_2=[[YELLOW]]Info: [[AQUA]]Ducken und Rechtsklick mit {0} Knochen in der Hand
 m.EffectsTaming8_0=Fast Food Service
-m.EffectsTaming8_1=Chance for wolves to heal when they attack
+m.EffectsTaming8_1=Chance for wolves to heal on attack
 m.AbilLockTaming5=LOCKED UNTIL 50+ SKILL (FAST FOOD SERVICE)
 m.AbilBonusTaming5_0=Fast Food Service
-m.AbilBonusTaming5_1=50% Chance to heal equivalent to damage dealt
+m.AbilBonusTaming5_1=50% Chance for heal on attack
 Swords.StoppedBleeding=[[GRAY]]The bleeding has [[GREEN]]stopped[[GRAY]]!
