--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ Version 1.3.00-dev
  - Changed chat logging for /p & /a
  - Changed Tree Feller to use per-use ArrayList
  - Prettied up new config files
+ - Removed Master/Apprentice chat notifications to reduce spam
  - Removed duplicate settings in config.yml
  - Removed unused settings from config.yml (HP Regen)
  - Removed Nether Brick from Mining XP Tables
