--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -368,8 +368,8 @@ m.EffectsTaming7_0=Call of the Wild
 m.EffectsTaming7_1=Summon a wolf to your side
 m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones in hand
 m.EffectsTaming8_0=Fast Food Service
-m.EffectsTaming8_1=Chance for wolves to heal when they attack
+m.EffectsTaming8_1=Chance for wolves to heal on attack
 m.AbilLockTaming5=LOCKED UNTIL 50+ SKILL (FAST FOOD SERVICE)
 m.AbilBonusTaming5_0=Fast Food Service
-m.AbilBonusTaming5_1=50% Chance to heal equivalent to damage dealt
+m.AbilBonusTaming5_1=50% Chance for heal on attack
 Swords.StoppedBleeding=[[GRAY]]The bleeding has [[GREEN]]stopped[[GRAY]]!
