--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ Version 1.3.00-dev
  - Added Fast Food Service subskill to Taming
  - Re-added mcMMO reporting damage events
  - Fixed /mcability not respecting permissions
+ - Changed god mode to turn off if player enters world where he does not have mcgod permission
  - Changed Taming to also gain XP from shearing
  - Changed Taming to also gain XP from animal taming
  - Changed Swords Bleeding effect to never kill
