--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,25 +1,31 @@
 Changelog:
-#Versions without changelogs probably had very small misc fixes, like tweaks to the source code
+Versions without changelogs probably had very small misc fixes, like tweaks to the source code
+
+Key:
+  + Addition
+  = Fix
+  ! Change
+  - Removal
 
 Version 1.3.00-dev
- - Added ability to customize drops for Excavation skill
- - Added ability to customize drops for Fishing skill
- - Added player notification for when they stop Bleeding
- - Added configuration option to control mcMMO reporting damage events
- - Added hunger regain bonuses to Herbalism skill
- - Added framework for new Blast Mining skill
- - Added Fast Food Service subskill to Taming
- - Re-added mcMMO reporting damage events
- - Fixed /mcability not respecting permissions
- - Changed god mode to turn off if player enters world where he does not have mcgod permission
- - Changed Taming to also gain XP from shearing
- - Changed Taming to also gain XP from animal taming
- - Changed Swords Bleeding effect to never kill
- - Changed Bleeding to never go beyond 10 ticks
- - Changed to use Bukkit's built-in ignoreCancelledEvents system
- - Changed chat logging for /p & /a
- - Changed Tree Feller to use per-use ArrayList
- - Prettied up new config files
+ + Added ability to customize drops for Excavation skill
+ + Added ability to customize drops for Fishing skill
+ + Added player notification for when they stop Bleeding
+ + Added configuration option to control mcMMO reporting damage events
+ + Added hunger regain bonuses to Herbalism skill
+ + Added framework for new Blast Mining skill
+ + Added Fast Food Service subskill to Taming
+ + Re-added mcMMO reporting damage events
+ = Fixed /mcability not respecting permissions
+ = Prettied up new config files
+ ! Changed god mode to turn off if player enters world where he does not have mcgod permission
+ ! Changed Taming to also gain XP from shearing
+ ! Changed Taming to also gain XP from animal taming
+ ! Changed Swords Bleeding effect to never kill
+ ! Changed Bleeding to never go beyond 10 ticks
+ ! Changed to use Bukkit's built-in ignoreCancelledEvents system
+ ! Changed chat logging for /p & /a
+ ! Changed Tree Feller to use per-use ArrayList
  - Removed Master/Apprentice chat notifications to reduce spam
  - Removed duplicate settings in config.yml
  - Removed unused settings from config.yml (HP Regen)
