--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ Version 1.3.00-dev
  + Re-added mcMMO reporting damage events
  = Fixed /mcability not respecting permissions
  = Prettied up new config files
+ ! Changed stats command name to mcstats for better plugin compatibility
  ! Changed god mode to turn off if player enters world where he does not have mcgod permission
  ! Changed Taming to also gain XP from shearing
  ! Changed Taming to also gain XP from animal taming
