--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ Version 1.3.00-dev
  ! Changed god mode to turn off if player enters world where he does not have mcgod permission
  ! Changed Taming to also gain XP from shearing
  ! Changed Taming to also gain XP from animal taming
+ ! Changed Taming to also gain XP from milking cows
  ! Changed Swords Bleeding effect to never kill
  ! Changed Bleeding to never go beyond 10 ticks
  ! Changed to use Bukkit's built-in ignoreCancelledEvents system
