--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,9 +16,11 @@ Version 1.3.00-dev
  + Added framework for new Blast Mining skill
  + Added Fast Food Service subskill to Taming
  + Re-added mcMMO reporting damage events
+ = Fixed Tree Feller not giving proper XP for different kinds of trees
  = Fixed memory leak with mob spawner tracking
  = Fixed /mcability not respecting permissions
  = Prettied up new config files
+ ! Changed Tree Feller to take down entire trees
  ! Changed mob spawn tracking to use Unique Entity ID instead of Entity Object
  ! Changed stats command name to mcstats for better plugin compatibility
  ! Changed god mode to turn off if player enters world where he does not have mcgod permission
