--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ Version 1.3.00-dev
  + Added Fast Food Service subskill to Taming
  + Re-added mcMMO reporting damage events
  = Fixed Tree Feller not giving proper XP for different kinds of trees
+ = Fixed Tree Feller conflicting with NoCheat
  = Fixed memory leak with mob spawner tracking
  = Fixed /mcability not respecting permissions
  = Prettied up new config files
