--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ Version 1.3.00-dev
  + Added framework for new Blast Mining skill
  + Added Fast Food Service subskill to Taming
  + Re-added mcMMO reporting damage events
+ = Fixed Green Thumb & Green Terra not consuming or requiring seeds to replant Wheat
  = Fixed Super Breaker & Giga Drill Breaker failing to damage tools
  = Fixed Tree Feller not giving proper XP for different kinds of trees
  = Fixed Tree Feller conflicting with NoCheat
