--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -161,8 +161,8 @@ m.EffectsUnarmed1_0=Berserk (ABILITY)
 m.EffectsUnarmed1_1=+50% DMG, Breaks weak materials
 m.EffectsUnarmed2_0=Disarm (Players)
 m.EffectsUnarmed2_1=Drops the foes item held in hand
-m.EffectsUnarmed3_0=Unarmed Mastery
-m.EffectsUnarmed3_1=Large Damage Upgrade
+m.EffectsUnarmed3_0=Iron Arm Style
+m.EffectsUnarmed3_1=Hardens your arm over time
 m.EffectsUnarmed4_0=Unarmed Apprentice
 m.EffectsUnarmed4_1=Damage Upgrade
 m.EffectsUnarmed5_0=Arrow Deflect
@@ -171,8 +171,8 @@ m.AbilLockUnarmed1=LOCKED UNTIL 250+ SKILL (UNARMED APPRENTICE)
 m.AbilLockUnarmed2=LOCKED UNTIL 500+ SKILL (UNARMED MASTERY)
 m.AbilBonusUnarmed1_0=Unarmed Apprentice
 m.AbilBonusUnarmed1_1=+2 DMG Upgrade
-m.AbilBonusUnarmed2_0=Unarmed Mastery
-m.AbilBonusUnarmed2_1=+4 DMG Upgrade
+m.AbilBonusUnarmed2_0=Iron Arm Style
+m.AbilBonusUnarmed2_1=+{0} DMG Upgrade
 m.UnarmedArrowDeflectChance=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}%
 m.UnarmedDisarmChance=[[RED]]Disarm Chance: [[YELLOW]]{0}%
 m.UnarmedBerserkLength=[[RED]]Berserk Length: [[YELLOW]]{0}s
