--- a/src/main/resources/locale/locale_es_es.properties
+++ b/src/main/resources/locale/locale_es_es.properties
@@ -161,8 +161,8 @@ m.EffectsUnarmed1_0=Enloquecer (HABILIDAD)
 m.EffectsUnarmed1_1=+50% daño, Romper materiales fragiles
 m.EffectsUnarmed2_0=Desarmar (Jugadores)
 m.EffectsUnarmed2_1=Caida del objeto de mano del enemigo
-m.EffectsUnarmed3_0=Maestro desarmado
-m.EffectsUnarmed3_1=Mejora de grandes daños
+m.EffectsUnarmed3_0=Iron Arm Style
+m.EffectsUnarmed3_1=Hardens your arm over time
 m.EffectsUnarmed4_0=Aprendiz desarmado
 m.EffectsUnarmed4_1=Mejora de daños
 m.EffectsUnarmed5_0=Desviar flechas
@@ -171,8 +171,8 @@ m.AbilLockUnarmed1=BLOQUEADO HASTA TENER HABILIDAD +250 (APRENDIZ DESARMADO)
 m.AbilLockUnarmed2=BLOQUEADO HASTA TENER HABILIDAD +500 (MAESTRO DESARMADO)
 m.AbilBonusUnarmed1_0=Aprendiz desarmado
 m.AbilBonusUnarmed1_1=Mejora de +2 de daño
-m.AbilBonusUnarmed2_0=Maestro desarmado
-m.AbilBonusUnarmed2_1=Mejora de +4 de daño
+m.AbilBonusUnarmed2_0=Iron Arm Style
+m.AbilBonusUnarmed2_1=+{0} DMG Upgrade
 m.UnarmedArrowDeflectChance=[[RED]]Posibilidad de Desviar flechas: [[YELLOW]]{0}%
 m.UnarmedDisarmChance=[[RED]]Posibilidad de Desarmar: [[YELLOW]]{0}%
 m.UnarmedBerserkLength=[[RED]]Posibilidad de Enloquecer: [[YELLOW]]{0}s
