--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -161,8 +161,8 @@ m.EffectsUnarmed1_0=Berserk (capacité spéciale)
 m.EffectsUnarmed1_1=+50% de dégâts, brise les matériaux faibles
 m.EffectsUnarmed2_0=Désarmer (les joueurs)
 m.EffectsUnarmed2_1=Vole l'objet que l'ennemi a dans la main
-m.EffectsUnarmed3_0=Apprenti du désarmement
-m.EffectsUnarmed3_1=Plus de dégâts
+m.EffectsUnarmed3_0=Iron Arm Style
+m.EffectsUnarmed3_1=Hardens your arm over time
 m.EffectsUnarmed4_0=Maîtrise du désarmement
 m.EffectsUnarmed4_1=Beaucoup plus de dégâts
 m.EffectsUnarmed5_0=Déviation des flèches
@@ -171,8 +171,8 @@ m.AbilLockUnarmed1=Débloqué au niveau 250 (Apprenti du désarmement)
 m.AbilLockUnarmed2=Débloqué au niveau 500 (Maîtrise du désarmement)
 m.AbilBonusUnarmed1_0=Apprenti du désarmement
 m.AbilBonusUnarmed1_1=+2 dégâts
-m.AbilBonusUnarmed2_0=Maîtrise du désarmement
-m.AbilBonusUnarmed2_1=+4 dégâts
+m.AbilBonusUnarmed2_0=Iron Arm Style
+m.AbilBonusUnarmed2_1=+{0} DMG Upgrade
 m.UnarmedArrowDeflectChance=[[RED]]Chances dévier les flèches : [[YELLOW]]{0}%
 m.UnarmedDisarmChance=[[RED]]Chances de Désarmer : [[YELLOW]]{0}%
 m.UnarmedBerserkLength=[[RED]]Durée de votre capacité spéciale : [[YELLOW]]{0}s
