--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -168,8 +168,8 @@ m.EffectsUnarmed1_0=Fúria (HABILIDADE ESPECIAL)
 m.EffectsUnarmed1_1=+50% de Dano, Quebra materiais frágeis
 m.EffectsUnarmed2_0=Desarmar (Jogadores)
 m.EffectsUnarmed2_1=Derruba a arma que o adversário está segurando
-m.EffectsUnarmed3_0=Mestre do Desarmamento
-m.EffectsUnarmed3_1=Aumenta muito o Dano
+m.EffectsUnarmed3_0=Iron Arm Style
+m.EffectsUnarmed3_1=Hardens your arm over time
 m.EffectsUnarmed4_0=Aprendiz do Desarmamento
 m.EffectsUnarmed4_1=Aumenta o Dano
 m.EffectsUnarmed5_0=Desviar Flechas
@@ -178,8 +178,8 @@ m.AbilLockUnarmed1=DESBLOQUEIE NO NIVEL 250 (APRENDIZ DE DESARMAMENTO)
 m.AbilLockUnarmed2=DESBLOQUEIE NO NIVEL 500 (MESTRE DE DESARMAMENTO)
 m.AbilBonusUnarmed1_0=Aprendiz do Desarmamento
 m.AbilBonusUnarmed1_1=+2 de Danos
-m.AbilBonusUnarmed2_0=Mestre do Desarmamento
-m.AbilBonusUnarmed2_1=+4 de Danos
+m.AbilBonusUnarmed2_0=Iron Arm Style
+m.AbilBonusUnarmed2_1=+{0} DMG Upgrade
 m.UnarmedArrowDeflectChance=[[RED]]Chance de Desviar Flechas: [[YELLOW]]{0}%
 m.UnarmedDisarmChance=[[RED]]Chance de Desarmar: [[YELLOW]]{0}%
 m.UnarmedBerserkLength=[[RED]]Duraçao da Fúria: [[YELLOW]]{0}s
