--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -161,8 +161,8 @@ m.EffectsUnarmed1_0=Raivopää (TAITO)
 m.EffectsUnarmed1_1=+50% vahinko, rikkoo heikkoja materiaaleja
 m.EffectsUnarmed2_0=Aseista riisuminen (Pelaajat)
 m.EffectsUnarmed2_1=Pudottaa vihollisen esineen kädestä
-m.EffectsUnarmed3_0=Aseistamattomuuden Herra
-m.EffectsUnarmed3_1=Suuri vahingonlisäys
+m.EffectsUnarmed3_0=Iron Arm Style
+m.EffectsUnarmed3_1=Hardens your arm over time
 m.EffectsUnarmed4_0=Aseistamattomuuden Aloittelija
 m.EffectsUnarmed4_1=Vahingonlisäys
 m.EffectsUnarmed5_0=Nuolentorjunta
@@ -171,8 +171,8 @@ m.AbilLockUnarmed1=LUKITTU KUNNES 250+ TAITO (ASEISTAMATTOMUUDEN ALOITTELIJA)
 m.AbilLockUnarmed2=LUKITTU KUNNES 500+ TAITO (ASEISTAMATTOMUUDEN HERRA)
 m.AbilBonusUnarmed1_0=Aseistamattomuuden Aloittelija
 m.AbilBonusUnarmed1_1=+2 Vahinko
-m.AbilBonusUnarmed2_0=Aseistamattomuuden Herra
-m.AbilBonusUnarmed2_1=+4 Vahinko
+m.AbilBonusUnarmed2_0=Iron Arm Style
+m.AbilBonusUnarmed2_1=+{0} DMG Upgrade
 m.UnarmedArrowDeflectChance=[[RED]]Nuolentorjunnan todennäköisyys: [[YELLOW]]{0}%
 m.UnarmedDisarmChance=[[RED]]Aseista riisumisen todennäköisyys: [[YELLOW]]{0}%
 m.UnarmedBerserkLength=[[RED]]Raivopään kesto: [[YELLOW]]{0}s
