--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -167,8 +167,8 @@ m.EffectsUnarmed1_0=Onbewapende gek (ABILITY)
 m.EffectsUnarmed1_1=+50% schade, hak zachte materialen weg
 m.EffectsUnarmed2_0=Ontwapen (Players)
 m.EffectsUnarmed2_1=Dropt het wapen van de vijand
-m.EffectsUnarmed3_0=Onbewapende held
-m.EffectsUnarmed3_1=Nog meer schade
+m.EffectsUnarmed3_0=Iron Arm Style
+m.EffectsUnarmed3_1=Hardens your arm over time
 m.EffectsUnarmed4_0=Onbewapende leerling
 m.EffectsUnarmed4_1=Meer schade
 m.EffectsUnarmed5_0=Pijlafwijking
@@ -177,8 +177,8 @@ m.AbilLockUnarmed1=GEBLOKEERD TOT 250+ SKILL (Onbewapende leerling)
 m.AbilLockUnarmed2=GEBLOKEERD TOT 500+ SKILL (Onbewapende held)
 m.AbilBonusUnarmed1_0=Onbewapende leerling
 m.AbilBonusUnarmed1_1=+2 meer schade
-m.AbilBonusUnarmed2_0=Onbewapende held
-m.AbilBonusUnarmed2_1=+4 meer schade
+m.AbilBonusUnarmed2_0=Iron Arm Style
+m.AbilBonusUnarmed2_1=+{0} DMG Upgrade
 m.UnarmedArrowDeflectChance=[[RED]]Kans op Pijlafwijking: [[YELLOW]]{0}%
 m.UnarmedDisarmChance=[[RED]]Kans op Ontwapening: [[YELLOW]]{0}%
 m.UnarmedBerserkLength=[[RED]]Lengte van Onbewapende gek: [[YELLOW]]{0}s
