--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -161,8 +161,8 @@ m.EffectsUnarmed1_0=Wejscie Smoka (UMIEJETNOSC)
 m.EffectsUnarmed1_1=Polowe wieksze obrazenia, niszczy slabe przedmioty.
 m.EffectsUnarmed2_0=Rozbrojenie (Tylko graczy)
 m.EffectsUnarmed2_1=Przeciwnik upuszcza trzymany w reku przedmiot.
-m.EffectsUnarmed3_0=Wsciekle Piesci
-m.EffectsUnarmed3_1=Znaczne zwiekszenie zadawanych obrazen.
+m.EffectsUnarmed3_0=Iron Arm Style
+m.EffectsUnarmed3_1=Hardens your arm over time
 m.EffectsUnarmed4_0=Droga Smoka
 m.EffectsUnarmed4_1=Zwiekszenie zadawanych obrazen.
 m.EffectsUnarmed5_0=Odbicie strzaly
@@ -171,8 +171,8 @@ m.AbilLockUnarmed1=Aby odblokowac Droge Smoka, zdobadz 250 poziom.
 m.AbilLockUnarmed2=Aby odblokowac Wsciekle Piesci, zdobadz 500 poziom.
 m.AbilBonusUnarmed1_0=Droga Smoka
 m.AbilBonusUnarmed1_1=Zadawane obrazenia zwiekszone o 2.
-m.AbilBonusUnarmed2_0=Wsciekle Piesci
-m.AbilBonusUnarmed2_1=Zadawane obrazenia zwiekszone o 4.
+m.AbilBonusUnarmed2_0=Iron Arm Style
+m.AbilBonusUnarmed2_1=+{0} DMG Upgrade
 m.UnarmedArrowDeflectChance=[[RED]]Szansa na odbicie strzaly: [[YELLOW]]{0}%
 m.UnarmedDisarmChance=[[RED]]Szansa na rozbrojenie: [[YELLOW]]{0}%
 m.UnarmedBerserkLength=[[RED]]Dlugosc Wejscia Smoka: [[YELLOW]]{0} sekund.
