--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -362,3 +362,23 @@ m.AbilLockTaming5=LOCKED UNTIL 50+ SKILL (FAST FOOD SERVICE)
 m.AbilBonusTaming5_0=Fast Food Service
 m.AbilBonusTaming5_1=50% Chance for heal on attack
 Swords.StoppedBleeding=[[GRAY]]The bleeding has [[GREEN]]stopped[[GRAY]]!
+m.EffectsMining3_0=Blast Mining
+m.EffectsMining3_1=Bonuses to mining with TNT
+m.EffectsMining4_0=Bigger Bombs
+m.EffectsMining4_1=Increases TNT explosion radius
+m.EffectsMining5_0=Demolitions Expertise
+m.EffectsMining5_1=Decreases damage from TNT explosions
+m.AbilLockMining1=LOCKED UNTIL 125+ SKILL (BLAST MINING)
+m.AbilLockMining2=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
+m.AbilLockMining3=LOCKED UNTIL 500+ SKILL (DEMOLITIONS EXPERTISE)
+m.MiningBiggerBombs=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
+m.MiningDemolitionsExpertDamageDecrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}%
+m.MiningBlastMining=[[RED]]Blast Mining: [[YELLOW]] Rank {0} [[GRAY]]({1})
+m.BlastMining1 = +5% ore yield
+m.BlastMining2 = +10% ore yield
+m.BlastMining3 = +15% ore yield, no debris
+m.BlastMining4 = +20% ore yield, no debris
+m.BlastMining5 = +25% ore yield, no debris, double drops
+m.BlastMining6 = +30% ore yield, no debris, double drops
+m.BlastMining7 = +35% ore yield, no debris, triple drops
+m.BlastMining8 = +40% ore yield, no debris, triple drops
