Repair optimizations. LOTS of repair optimizations.

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -299,7 +299,7 @@ Skills.ExcavationUp=[[YELLOW]]Excavation skill increased by {0}. Total ({1})
 Skills.FeltEasy=[[GRAY]]That felt easy.
 Skills.StackedItems=[[DARK_RED]]You can't repair stacked items
 Skills.NeedMore=[[DARK_RED]]You need more
-Skills.AdeptDiamond=[[DARK_RED]]You're not skilled enough to repair Diamond
+Skills.AdeptDiamond=[[DARK_RED]]You're not skilled enough to repair Diamond.
 Skills.FullDurability=[[GRAY]]That is at full durability.
 Skills.Disarmed=[[DARK_RED]]You have been disarmed!
 m.LVL=[[DARK_GRAY]]LVL: [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
@@ -392,3 +392,6 @@ m.BlastMining5 = +25% ore yield, no debris, double drops
 m.BlastMining6 = +30% ore yield, no debris, double drops
 m.BlastMining7 = +35% ore yield, no debris, triple drops
 m.BlastMining8 = +40% ore yield, no debris, triple drops
+Skills.AdeptStone=[[DARK_RED]]You're not skilled enough to repair Stone.
+Skills.AdeptIron=[[DARK_RED]]You're not skilled enough to repair Iron.
+Skills.AdeptGold=[[DARK_RED]]You're not skilled enough to repair Gold.
