--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -379,3 +379,6 @@ m.BlastMining5 = +25% ore yield, no debris, double drops
 m.BlastMining6 = +30% ore yield, no debris, double drops
 m.BlastMining7 = +35% ore yield, no debris, triple drops
 m.BlastMining8 = +40% ore yield, no debris, triple drops
+Skills.AdeptStone=[[DARK_RED]]You're not skilled enough to repair Stone.
+Skills.AdeptIron=[[DARK_RED]]You're not skilled enough to repair Iron.
+Skills.AdeptGold=[[DARK_RED]]You're not skilled enough to repair Gold.
