--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,7 +24,7 @@ Version 1.3.00-dev
  = Fixed memory leak with mob spawner tracking
  = Fixed /mcability not respecting permissions
  = Prettied up new config files
- = Optimized repair functions
+ = Various skill function optimizations
  ! Changed mcMMO user information to be stored for 2 minutes after log out to reduce lag on rejoins
  ! Changed the name of Unarmed Apprentice/Mastery to Iron Arm Style
  ! Changed Unarmed to start with a +3 DMG bonus from Iron Arm Style to make leveling it more viable
