Tree Feller is faster. Added limit to tree feller. Added Jungle Tree to Woodcutting XP Tables. Renamed Pine to Oak. Modified default Woodcutting XP Tables.

--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -385,3 +385,4 @@ m.BlastMining8 = +40% ore yield, no debris, triple drops
 Skills.AdeptStone=[[DARK_RED]]You're not skilled enough to repair Stone.
 Skills.AdeptIron=[[DARK_RED]]You're not skilled enough to repair Iron.
 Skills.AdeptGold=[[DARK_RED]]You're not skilled enough to repair Gold.
+Skills.Woodcutting.TreeFellerThreshold=[[RED]]That tree is too large!
