--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,11 +10,13 @@ Key:
 Version 1.3.00-dev
  + Added ability to customize drops for Excavation skill
  + Added ability to customize drops for Fishing skill
+ + Added jungle trees to Woodcutting XP tables
  + Added player notification for when they stop Bleeding
  + Added configuration option to control mcMMO reporting damage events
  + Added hunger regain bonuses to Herbalism skill
  + Added Blast Mining subskills to Mining
  + Added Fast Food Service subskill to Taming
+ + Added size limit to Tree Feller in config as Tree Feller Threshold
  + Re-added mcMMO reporting damage events
  = Fixed Leaf Blower preventing the use of shears to collect leaves
  = Fixed Green Thumb & Green Terra not consuming or requiring seeds to replant Wheat
@@ -26,6 +28,8 @@ Version 1.3.00-dev
  = Prettied up new config files
  = Various skill function optimizations
  ! Changed mcMMO user information to be stored for 2 minutes after log out to reduce lag on rejoins
+ ! Changed default values of Woodcutting XP tables
+ ! Changed 'Pine' to be renamed 'Oak' in Woodcutting XP tables
  ! Changed the name of Unarmed Apprentice/Mastery to Iron Arm Style
  ! Changed Unarmed to start with a +3 DMG bonus from Iron Arm Style to make leveling it more viable
  ! Changed Unarmed to gain bonus damage every 50 skill levels
