--- a/Changelog.txt
+++ b/Changelog.txt
@@ -34,7 +34,7 @@ Version 1.3.00-dev
  ! Changed default values of Woodcutting XP tables
  ! Changed 'Pine' to be renamed 'Oak' in Woodcutting XP tables
  ! Changed the name of Unarmed Apprentice/Mastery to Iron Arm Style
- ! Changed Unarmed to start with a +3 DMG bonus from Iron Arm Style to make leveling it more viable
+ ! Changed Unarmed to start with a +3 DMG (1 Heart = 2 DMG) bonus from Iron Arm Style to make leveling it more viable
  ! Changed Unarmed to gain bonus damage every 50 skill levels
  ! Changed Unarmed to gain more bonus damage total than before
  ! Changed Tree Feller to take down entire trees
