--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -186,7 +186,7 @@ m.HerbalismGreenTerraLength=[[YELLOW]]Gruene Welt Dauer: [[GREEN]]{0}s
 m.HerbalismGreenThumbChance=[[YELLOW]]Gruener Daumen Chance: [[GREEN]]{0}%
 m.HerbalismGreenThumbStage=[[YELLOW]]Gruener Daumen Stufe: [[GREEN]] Getreide waechst auf Stufe {0}
 m.HerbalismDoubleDropChance=[[YELLOW]]Doppelte Drop Chance: [[GREEN]]{0}%
-m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
+m.HerbalismFoodPlus=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 m.SkillExcavation=Graben (Excavation)
 m.XPGainExcavation=[[YELLOW]]Graben und Finden von Schaetzen
 m.EffectsExcavation1_0=[[YELLOW]]Giga Bohrer (Faehigkeit)
