--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -188,7 +188,7 @@ m.HerbalismGreenTerraLength=[[RED]]Green Terra Length: [[YELLOW]]{0}s
 m.HerbalismGreenThumbChance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Green Thumb Stage: [[YELLOW]] Wheat grows in stage {0}
 m.HerbalismDoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
+m.HerbalismFoodPlus=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 m.SkillExcavation=EXCAVATION
 m.XPGainExcavation=Digging and finding treasures
 m.EffectsExcavation1_0=Giga Drill Breaker (ABILITY)
