--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -186,7 +186,7 @@ m.HerbalismGreenTerraLength=[[RED]]Durée de la capacité spéciale : [[YELLOW]]{0}
 m.HerbalismGreenThumbChance=[[RED]]Cances d'obtenir la main verte : [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Main verte par niveaux : [[YELLOW]] Wheat grows in stage {0}
 m.HerbalismDoubleDropChance=[[RED]]Chances du Double Butin : [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
+m.HerbalismFoodPlus=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 m.SkillExcavation=EXCAVATION
 m.XPGainExcavation=Creuser et trouver des trésors
 m.EffectsExcavation1_0=Super broyeur (capacité spéciale)
