--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -192,7 +192,7 @@ m.HerbalismGreenTerraLength=[[RED]]Groene Aarde lengte: [[YELLOW]]{0}s
 m.HerbalismGreenThumbChance=[[RED]]Kans op Groene vingers: [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Groene vingers periode: [[YELLOW]] Wheat groeit in periode {0}
 m.HerbalismDoubleDropChance=[[RED]]Kans op Dubbele Drop: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
+m.HerbalismFoodPlus=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 m.SkillExcavation=UITGRAVING
 m.XPGainExcavation=Graven
 m.EffectsExcavation1_0=Giga Drilboor (ABILITY)
