--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -187,7 +187,7 @@ m.HerbalismGreenTerraLength=[[RED]]Продолжительность "Озеленителя": [[YELLOW]]{0
 m.HerbalismGreenThumbChance=[[RED]]Шанс "Зеленого фермера": [[YELLOW]]{0}%
 m.HerbalismGreenThumbStage=[[RED]]Уровень "Зеленого фермера": [[YELLOW]] Пщеница растет по-уровнево {0}
 m.HerbalismDoubleDropChance=[[RED]]Шанс двойного дропа: [[YELLOW]]{0}%
-m.HerbalismFoodPlus=[[RED]]Farmer's Diet (Rank{0})
+m.HerbalismFoodPlus=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 m.SkillExcavation=Раскопка
 m.XPGainExcavation=Раскапывать и искать сокровища
 m.EffectsExcavation1_0=Мега дрель(способность)
