--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ Version 1.3.00-dev
  + Added Blast Mining subskills to Mining
  + Added Fast Food Service subskill to Taming
  + Added size limit to Tree Feller in config as Tree Feller Threshold
+ + Added /addlevels command 
  + Re-added mcMMO reporting damage events
  = Fixed bug where Swords command showed Bleed Length twice instead of Bleed Chance
  = Fixed bug where Tree Feller wasn't checking for Tree Feller permission
