--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,9 +17,9 @@ Version 1.3.00-dev
  + Added Blast Mining subskills to Mining
  + Added Fast Food Service subskill to Taming
  + Added size limit to Tree Feller in config as Tree Feller Threshold
- + Added /addlevels command 
+ + Added /addlevels commands
+ + Added /mcremove command which lets you remove users from MySQL or FlatFile
  + Added config values for XP multipliers for different hostile mobs
- + Added mcremove commands
  + Re-added mcMMO reporting damage events
  = Fixed bug where Swords command showed Bleed Length twice instead of Bleed Chance
  = Fixed bug where Tree Feller wasn't checking for Tree Feller permission
