Finished changes to Whois -> Inspect

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -27,7 +27,7 @@ m.mccMySpawn=[[YELLOW]]- Teleport zum Spawnpunkt
 m.mccClearMySpawn=[[YELLOW]]- Spawnpunkt loeschen
 m.mccToggleAbility=[[YELLOW]]- Faehigkeitsaktivierung mit rechtsklick an/aus schalten
 m.mccAdminToggle=[[YELLOW]]- Adminchat aktivieren
-m.mccWhois=[[WHITE]][playername] [[YELLOW]]- Detailierte Spielerinfos zeigen
+m.mccInspect=[[WHITE]][playername] [[YELLOW]]- Detailierte Spielerinfos zeigen
 m.mccMmoedit=[playername] [skill] [newvalue] [[YELLOW]]- Ziel modifizieren
 m.mccMcGod=[[YELLOW]]- God Mode
 m.mccSkillInfo=[[WHITE]][skillname] [[YELLOW]]- Detailierte Skillinfos zeigen
