--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -27,7 +27,7 @@ m.mccMySpawn=- Teleports to myspawn
 m.mccClearMySpawn=- Clears your MySpawn
 m.mccToggleAbility=- Toggle ability activation with right click
 m.mccAdminToggle=- Toggle admin chat
-m.mccWhois=[playername] [[RED]]- View detailed player info
+m.mccInspect=[playername] [[RED]]- View detailed player info
 m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Modify target
 m.mccMcGod=- God Mode
 m.mccSkillInfo=[skillname] [[RED]]- View detailed information about a skill
