--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -27,7 +27,7 @@ m.mccMySpawn=- Siirt‰‰ sinut myspawniin
 m.mccClearMySpawn=- Tyhj‰‰ myspawnisi
 m.mccToggleAbility=- Laita taitojen aktivointi oikealla n‰pp‰imell‰ p‰‰lle/pois
 m.mccAdminToggle=- Laita admin juttelu p‰‰lle/pois
-m.mccWhois=[playername] [[RED]]- N‰yt‰ yksityiskohtaiset tiedot pelaajasta
+m.mccInspect=[playername] [[RED]]- N‰yt‰ yksityiskohtaiset tiedot pelaajasta
 m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Muokkaa kohdetta
 m.mccMcGod=- "God Mode"
 m.mccSkillInfo=[skillname] [[RED]]- N‰yt‰ ykistyiskohtaiset tiedot taidosta
