--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -27,7 +27,7 @@ m.mccMySpawn=- Vous téléporte à votre spawn
 m.mccClearMySpawn=- Éfface votre point de spawn
 m.mccToggleAbility=- Active les capacités spéciales avec clic droit
 m.mccAdminToggle=- Active le chat admin
-m.mccWhois=[playername] [[RED]]- Voir les infos détaillées du joueur
+m.mccInspect=[playername] [[RED]]- Voir les infos détaillées du joueur
 m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Modifier 
 m.mccMcGod=- Mode dieu
 m.mccSkillInfo=[skillname] [[RED]]- Afficher des informations détaillées d'une compétence
