--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -33,7 +33,7 @@ m.mccMySpawn=- Teleporteer naar MySpawn
 m.mccClearMySpawn=- Verwijder je MySpawn
 m.mccToggleAbility=- Doe ability activatie aan/uit
 m.mccAdminToggle=- Doe admin chat aan/uit
-m.mccWhois=[playername] [[RED]]- Laat informatie zien over speler
+m.mccInspect=[playername] [[RED]]- Laat informatie zien over speler
 m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Verander levels
 m.mccMcGod=- God Modus
 m.mccSkillInfo=[skillname] [[RED]]- Laat informatie zien over een skill
