--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -27,7 +27,7 @@ m.mccMySpawn=- Teleportuje do twojego spawna.
 m.mccClearMySpawn=- Kasuje twoj spawn i zmienia na domyslny.
 m.mccToggleAbility=- Wlacza specjalna umiejetnosc prawym przyciskiem myszy.
 m.mccAdminToggle=- Wlacza chat adminow.
-m.mccWhois=[nazwa gracza] [[RED]]- Zobacz szczegolowe informacje o graczu.
+m.mccInspect=[nazwa gracza] [[RED]]- Zobacz szczegolowe informacje o graczu.
 m.mccMmoedit=[nazwa gracza] [umiejetnosc] [nowa wartosc] [[RED]]- Modyfikuje cel.
 m.mccMcGod=- Niesmiertelnosc.
 m.mccSkillInfo=/[nazwa umiejetnosci (np. Mining)] [[RED]]- Wyswietla informacje na temat umiejetnosci.
