--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -27,7 +27,7 @@ m.mccMySpawn=- Teleportar para o spawn
 m.mccClearMySpawn=- Remove o Ponto de Spawn
 m.mccToggleAbility=- Ativa habilidades especiais com botao direito
 m.mccAdminToggle=- Ativa o chat dos admin
-m.mccWhois=[playername] [[RED]]- Ver informaçoes do jogador
+m.mccInspect=[playername] [[RED]]- Ver informaçoes do jogador
 m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Modificar atributos do jogador
 m.mccMcGod=- Modo Deus
 m.mccSkillInfo=[skillname] [[RED]]- Ver informaçoes sobre a habilidade
