--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -28,7 +28,7 @@ m.mccMySpawn=- Телепортирует к вашей кровати
 m.mccClearMySpawn=- Убирает вашу кровать
 m.mccToggleAbility=- Активировать возможность правым кликом мыши
 m.mccAdminToggle=- Включить админский чат
-m.mccWhois=[playername] [[RED]]- Посмотреть детальную информацию
+m.mccInspect=[playername] [[RED]]- Посмотреть детальную информацию
 m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Изменить цель
 m.mccMcGod=- Режим Бога
 m.mccSkillInfo=[skillname] [[RED]]- Посмотреть детальную информацию о умении
