--- a/src/main/resources/locale/locale_es_es.properties
+++ b/src/main/resources/locale/locale_es_es.properties
@@ -27,7 +27,7 @@ m.mccMySpawn=- Teletransportate a tu lugar de nacimiento
 m.mccClearMySpawn=- Limpia tu lugar de nacimiento
 m.mccToggleAbility=- Activa/Desactiva la activacion de la habilidad con el click derecho
 m.mccAdminToggle=- Activa/Desactiva el chat de admins
-m.mccWhois=[playername] [[RED]]- Mira informacion detallada del jugador
+m.mccInspect=[playername] [[RED]]- Mira informacion detallada del jugador
 m.mccMmoedit=[playername] [skill] [newvalue] [[RED]]- Modifica el objetivo
 m.mccMcGod=- Modo dios
 m.mccSkillInfo=[skillname] [[RED]]- Mira informacion detallada sobre una habilidad
