Axes gains bonus DMG every 50 levels like Unarmed now.

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -101,9 +101,17 @@ m.EffectsAxes2_0=Critical Strikes
 m.EffectsAxes2_1=Double Damage
 m.EffectsAxes3_0=Axe Mastery
 m.EffectsAxes3_1=Modifies Damage
+m.EffectsAxes4_0=Impact
+m.EffectsAxes4_1=Strike with enough force to shatter armor
+m.EffectsAxes5_0=Greater Impact
+m.EffectsAxes5_1=Deal bonus damage to unarmored foes
 m.AbilLockAxes1=LOCKED UNTIL 500+ SKILL (AXE MASTERY)
 m.AbilBonusAxes1_0=Axe Mastery
-m.AbilBonusAxes1_1=Bonus 4 damage
+m.AbilBonusAxes1_1=Bonus {0} damage
+m.AbilBonusAxes2_0=Impact
+m.AbilBonusAxes2_1=Deal {0} DMG to armor
+m.AbilBonusAxes3_0=Greater Impact
+m.AbilBonusAxes3_1=Deal {0} Bonus DMG to the unarmored
 m.AxesCritChance=[[RED]]Chance to critically strike: [[YELLOW]]{0}%
 m.AxesSkullLength=[[RED]]Skull Splitter Length: [[YELLOW]]{0}s
 m.SkillSwords=SWORDS
